--- a/index.html
+++ b/index.html
@@ -421,10 +421,10 @@
         <div class="container ">
             <span>   copyright &copy;2014 ROZANA </span>
             <ul>
-                <li><img src="/go.webp "></li>
-                <li><img src="/in.webp "></li>
-                <li><img src="/tw.webp "></li>
-                <li><img src="/fac.webp "></li>
+                <li><img src="./go.webp "></li>
+                <li><img src="./in.webp "></li>
+                <li><img src="./tw.webp "></li>
+                <li><img src="./fac.webp "></li>
             </ul>
         </div>
     </div>
